Fix crash when adding skin modifier to empty mesh

Fixes bug [#32362] SIGSEGV when adding skin modifier to empty mesh
projects.blender.org/tracker/?func=detail&atid=498&aid=32362&group_id=9